# intelligent-systems-exercises

./: .gitignore  LICENSE  README.md  pyproject.toml
src/00_env_test/: main.py
src/ex_06_bfs_maze_solver/bfs_labirinto/: main.py
src/ex_06_bfs_maze_solver/bfs_percorso/: main.py
src/ex_06_bfs_maze_solver/dfs_labirinto/: main.py
src/ex_06_bfs_maze_solver/resources/: labirinto1.json  labirinto2.json  labirinto3.json
src/ex_07_best_first_search/a_star/: main.py
src/ex_07_best_first_search/best_first_search/: main.py
src/ex_08/a_star/: main.py
src/ex_08/stars/: main.py
src/ex_09/genetic_algorithm/: main.py
src/ex_10/hill_climbing/: main.py
src/ex_10/numpy_hill_climbing/: main.py
