[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-systems-exercises"
version = "0.1.0"
description = "Collezione di script per analisi dati"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy",
]

#[project.optional-dependencies]
# aggiungere librerie extra (es. per grafici)
#dev = ["matplotlib", "pandas"]