[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-systems-exercises"
version = "0.1.0"
description = "Collezione di script per analisi dati"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "matplotlib",
]

# Puoi mantenere questa sezione se vuoi installare strumenti di sviluppo
# separatamente, come formattatori o linter.
[project.optional-dependencies]
dev = ["pytest", "black"]